Fix intro button to always be visible

--- a/src/icp/sass/pages/_draw.scss
+++ b/src/icp/sass/pages/_draw.scss
@@ -23,3 +23,14 @@
       width: 100%;
   }
 }
+
+#splash-button {
+  position: fixed;
+  bottom: 0;
+  width: $sidebar-width - (15px * 2);
+  @media(min-width: 1040px) {
+    width: $sidebar-width-lg - (15px * 2);
+  }
+  padding: 15px 0;
+  background: white;
+}
